# myalias

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  tests.yml
coverage/: d_7584905901223be1___init___py.html  d_7584905901223be1_append_commands_cli_service_py.html  d_7584905901223be1_create_folders_app_service_py.html  d_7584905901223be1_get_all_command_service_py.html  d_7584905901223be1_get_path_application_service_py.html  d_7584905901223be1_get_path_config_service_py.html  d_7584905901223be1_get_version_app_service_py.html  d_7584905901223be1_transform_file_into_tuples_list_service_py.html  d_7584905901223be1_update_version_app_service_py.html  d_a92dd857bb4a3678___init___py.html  d_a92dd857bb4a3678_add_alias_command_py.html  d_a92dd857bb4a3678_import_aliases_command_py.html  d_a92dd857bb4a3678_list_alias_command_py.html  d_a92dd857bb4a3678_remove_alias_command_py.html  d_ac682a69cf226216___init___py.html  d_ac682a69cf226216_about_command_py.html  d_ac682a69cf226216_setup_command_py.html  d_d41c553fac74b8bb___init___py.html  d_ecbc02d8a785eeb8___init___py.html  d_ecbc02d8a785eeb8_command_interface_py.html  d_ecbc02d8a785eeb8_service_interface_py.html  d_f2b019c3d6cae749___init___py.html  d_f2b019c3d6cae749_cli_py.html  index.html  status.json
docs/: 404.html  index.html  index.md  objects.inv
docs/api/commands/: add_alias_command.md
myalias/: cli.py
myalias/commands/: add_alias_command.py  import_aliases_command.py  list_alias_command.py  remove_alias_command.py
myalias/core/commands/: about_command.py  setup_command.py
myalias/core/interfaces/: command_interface.py  service_interface.py
myalias/core/services/: append_commands_cli_service.py  create_folders_app_service.py  get_all_command_service.py  get_path_application_service.py  (+4 more)
(+17 files in other folders)
