[tool.poetry]
name = "myalias"
version = "0.1.2"
description = ""
authors = ["Thiago Melo <4thiagomelo5@gmail.com>"]
license = "GPLv3"
packages = [{include = "myalias"}]
readme = "README.md"
classifiers = [ 
  "Programming Language :: Python :: 3.10", 
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
  "Operating System :: OS Independent", 
  "Development Status :: 5 - Production/Stable", 
  "Environment :: Console", 
  "Intended Audience :: Developers", 
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities", "Typing :: Typed"
]

[tool.poetry.urls]
documentation = "https://thiagomeloo.github.io/myalias/docs"
repository = "https://github.com/thiagomeloo/myalias"
homepage = "https://thiagomeloo.github.io/myalias/docs"
bug_tracker = "https://github.com/thiagomeloo/myalias/issues"

[tool.poetry.scripts]
myalias = "myalias.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.4.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
format = "blue . && isort ."
docs = "mkdocs serve"
build-docs = "mkdocs build"
build-coverage= "coverage html"
pre_test = "task lint"
test = "pytest -s -x --cov=myalias -vv"
post_test = "coverage html"